# Task-Management-API

./: .env  .gitignore  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2c2739a2af23_add_user_id_to_tasks.py
src/tasks/: controller.py  dtos.py  models.py  router.py  routes.py
src/user/: controller.py  dtos.py  models.py  router.py  routes.py
src/utils/: db.py  helpers.py  mail.py  settings.py
